--- a/AppAndroid/app/src/main/res/layout/activity_main.xml
+++ b/AppAndroid/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:text="@string/mua_credit"
+        android:onClick="muaCredit"
         app:layout_constraintBottom_toTopOf="@+id/btn_QL_TK"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -59,19 +60,22 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:onClick="Login"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
-        app:layout_constraintTop_toTopOf="@+id/imageButton2"
+        app:layout_constraintEnd_toStartOf="@+id/ic_HuongDan"
+        app:layout_constraintTop_toTopOf="@+id/ic_HuongDan"
         app:srcCompat="@android:drawable/ic_input_add"
-        tools:ignore="MissingConstraints,OnClick" />
+        tools:ignore="MissingConstraints,OnClick"
+        android:contentDescription="TODO" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/ic_HuongDan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toStartOf="@+id/imageButton3"
         app:layout_constraintTop_toTopOf="@+id/imageButton3"
-        app:srcCompat="@android:drawable/ic_menu_search" />
+        app:srcCompat="@android:drawable/ic_menu_search"
+
+        />
 
     <ImageButton
         android:id="@+id/imageButton3"
@@ -79,9 +83,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:onClick="hethong"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_edit" />
+        app:srcCompat="@android:drawable/ic_menu_edit"
+        android:contentDescription="TODO" />
 
     <ImageView
         android:id="@+id/ic_Game_TraLoi"
